# dsspy

./: .coverage  .gitignore  .pylintrc  .pytest.ini  AGENTS.md  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  TODO.md  changelog  pyproject.toml
.github/workflows/: build-documentation.yml  cmake-multi-platform.yml  python-ci.yml
cpp_legacy/: CMakeLists.txt  README.md
cpp_legacy/libdssp/cmake/: dssp-config.cmake.in
cpp_legacy/libdssp/mmcif_pdbx/: dssp-extension.dic
cpp_legacy/libdssp/src/: dssp-io.cpp  dssp-io.hpp  dssp.cpp  revision.hpp
cpp_legacy/python-module/: test-mkdssp.py
cpp_legacy/src/: mkdssp.cpp  revision.hpp
cpp_legacy/test/: CMakeLists.txt  pdb1cbs.ent  test-python.py
doc/: mkdssp.md
dsspy/: accessibility.py  algorithm.py  cli.py  constants.py  core.py  geometry.py  hbond.py  io.py  output.py  secondary_structure.py  utils.py
libdssp/: CMakeLists.txt
libdssp/include/: dssp.hpp
libdssp/mmcif_pdbx/: dssp-extension.dic
libdssp/src/: dssp-io.cpp  dssp.cpp
python-module/: CMakeLists.txt  dssp-python-plugin.cpp  test-mkdssp.py
src/: algorithm.py  io.py  mkdssp.cpp  output.py
src/dsspy/: algorithm.py
test/: 1cbs-dssp.cif  1cbs.cif  CMakeLists.txt  test-python.py  test_accessibility.py  test_algorithm.py  test_beta_sheets.py  test_cli.py  test_core.py  test_geometry.py  test_hbond.py  test_io.py  test_output.py  test_secondary_structure.py  test_utils.py  unit-test-dssp.cpp
test/reference_data/: 1cbs-dssp.cif
tests/: 1cbs.dssp  1cbs_accessibility.dssp  test_accessibility.py  test_algorithm.py  test_io.py  test_pp_helices.py
